client/css/style.less
@blue:#55a1ee;
@orange:#ff6600;
@lightGrey:#cccccc;
@darkGrey:#999999;

html, body {
    .backgroundImage('light_bg.png');
    .droid();
}
h1, h2, h3, h4, h5, h6 {
    .oswald();
}
a {
    color:@blue;
    text-decoration:none;
}
a:hover {
    color:@orange;
}
.container {
    .border(5px, solid, @lightGrey);
    .backgroundColor(white);
    width: 100%;
    max-width: 1140px;
    min-width: 755px;
    margin:0 auto;
    margin-top:15px;
    margin-bottom:15px;
    .header {
    }
    .nav {
        border-top:5px solid @lightGrey;
        margin-top:-6px;
        .backgroundColor(@lightGrey);
        .categories {
            li {
                display:inline;
                a {
                    .oswald();
                    color:black;
                    text-decoration:none;
                    padding:0 15px 0 10px;
                }
                a:hover {
                    color:@blue;
                    .backgroundColor(white);
                }
                .active {
                    .backgroundColor(white);
                    color:@blue;
                }
            }
        }
        .account-controls {
            float:right;
            text-align:right;
            li {
                display:inline;
                a {
                    .oswald(normal, 20px, 40px);
                    color:@darkGrey;
                    text-decoration:none;
                    padding:0 5px 0 5px;
                }
                a:hover {
                    color:@blue;
                }
                .active {
                    .backgroundColor(white);
                    color:@blue;
                    padding-bottom:5px;
                }
            }
        }
    }
    .errors {
    }
    .main {
        position:relative;
        .back {
            .oswald(normal, 20px, 20px);
            color:@orange;
            padding:10px 0 0 15px;
        }
        .back:hover {
            color:@blue;
        }
        .account-modal {
            display:none;
            position:absolute;
            right:0;
            top:0;
            background-color:@lightGrey;
            padding:5px;
            input {
                display:block;
            }
            .login {
                display:none;
            }
            .register {
                display:none;
            }
        }
        .posts {
            .post {
                padding:10px 15px 10px 15px;
                img {
                    .border(5px, solid, @lightGrey);
                }
                h3 {
                    a {
                        color:black;
                        text-decoration:none;
                    }
                    a:hover {
                        color:@blue;
                    }
                }
                .controls {
                    .oswald(normal, 20px, 20px);
                    padding:5px;
                    border-top:3px solid @lightGrey;
                    border-bottom:3px solid @lightGrey;
                    a {
                        padding-left:10px;
                    }
                    .price {
                        font-size:1.1em;
                    }
                    .commentLink {
                        float:right;
                    }
                    .saved {
                        color:@lightGrey;
                    }
                }
            }
        }
        .profile {
            padding:15px;
            .post {
                .border(5px, solid, @lightGrey);
                padding:10px;
                margin:10px;
            }
        }
    }
    .footer {
        background:@lightGrey;
        text-align:right;
        .oswald(normal, 20px, 25px);
        p {
            margin:0 auto;
            color:white;
        }
        a {
            display:inline;
            color:white;
        }
        a:hover {
            color:@blue;
        }
    }
}
.border(@size:1px, @style:solid, @color:black) {
    border:@size @style @color;
}
.backgroundColor(@color:white) {
    background-color: @color;
}
.backgroundImage(@img) {
    background-image: url('/@{img}');
}
.oswald(@weight:normal, @size:30px, @lineHeight:40px) {
    font-family:oswald;
    font-weight:@weight;
    font-size:@size;
    line-height:@lineHeight;
    src:url('/oswald.ttf');
}
.roboto(@weight:normal, @size:16px, @lineHeight:20px) {
    font-family:roboto;
    font-weight:@weight;
    font-size:@size;
    line-height:@lineHeight;
    src:url('/roboto.ttf');
}
.droid(@weight:normal, @size:20px, @lineHeight:24px) {
    font-family:droid;
    font-weight:@weight;
    font-size:@size;
    line-height:@lineHeight;
    src:url('/droid.ttf');
}

